use a different plugin to fix the image overlapping problem. not as good as the previous one, but at least they aren't overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -349,12 +349,31 @@ figcaption {
 
 .splide {
   margin: 2rem 0 2rem;
-  background: #83b4b3; }
+  padding: 2rem;
+  background: #83b4b3;
+  max-height: 70vh; }
+  .splide__slide figure {
+    padding: 1rem;
+    margin: 1rem 0.5rem;
+    width: fit-content; }
+
+.splide-img {
+  margin: 1rem;
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 0.5rem;
+  object-fit: cover; }
+  @media only screen and (min-width: 580px) {
+    .splide-img {
+      height: 30rem; } }
+  @media only screen and (min-width: 900px) {
+    .splide-img {
+      height: 35rem; } }
 
 figcaption {
   font-size: 1.4rem;
   color: #097392;
-  margin-top: 0.5rem;
+  margin: 0.5rem auto 2rem;
   text-align: center; }
 
 footer {
