--- a/sass/04layout/_article.scss
+++ b/sass/04layout/_article.scss
@@ -156,27 +156,43 @@ figcaption {
 
 .splide {
   margin: 2rem 0 2rem;
+  padding: 2rem;
   background: $color-blue-grey;
+  max-height: 70vh;
+  // display: flex;
+  // align-items: center;
+  // justify-content: space-between;
+
+  &__slide {
+    // border: 2px solid green;
+
+    & figure {
+      padding: 1rem;
+      margin: 1rem 0.5rem;
+      width: fit-content;
+    }
+  }
 }
 
-// .splide-img {
-//   display: block;
-//   width: auto;
-//   height: 25rem;
-//   margin-right: 1rem;
-//   border-radius: 0.5rem;
+.splide-img {
+  margin: 1rem;
+  max-width: 100%;
+  // height: 25rem;
+  max-height: 100%;
+  border-radius: 0.5rem;
+  object-fit: cover;
 
-//   @include responsive(tab) {
-//     height: 30rem;
-//   }
-//   @include responsive(sm-desktop) {
-//     height: 35rem;
-//   }
-// }
+  @include responsive(tab) {
+    height: 30rem;
+  }
+  @include responsive(sm-desktop) {
+    height: 35rem;
+  }
+}
 
 figcaption {
   font-size: $font-size-xs;
   color: $color-base-blue; //$color-deep-blue-grey;
-  margin-top: 0.5rem;
+  margin: 0.5rem auto 2rem;
   text-align: center;
 }
